service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver-pod
  ports:
    - port: 80
      targetPort: echo-port
